--- a/css/services.css
+++ b/css/services.css
@@ -16,6 +16,7 @@
 
 .services {
   position: relative;
+  overflow: hidden;
 }
 .services * {
   color: #0c140e;
@@ -44,14 +45,12 @@
   width: 0%;
   height: 100%;
   background-color: #A8DBBA;
-  transition: 0.2s ease-out;
 }
 .services__menu li:hover::before {
   width: 100%;
 }
 .services__content {
   padding: 20px;
-  overflow: hidden;
 }
 .services__content-header {
   position: relative;
@@ -69,11 +68,12 @@
   z-index: -1;
   position: absolute;
   content: "";
-  top: -35px;
-  left: -300px;
-  width: 700px;
+  top: -33px;
+  left: -100px;
+  width: clamp(300px, 33%, 33%);
   height: 100px;
   background-color: rgba(255, 255, 255, 0.5);
+  animation: float-left-to-right-before 0.2s ease-in forwards;
 }
 .services__content-header__select {
   width: clamp(300px, 50%, 50%);
